# ai_agent

./: .gitignore  Cargo.toml  LICENSE  README.md
agent/: Cargo.toml
agent/src/: consts.rs  infra.rs  lib.rs  llm.rs  memory.rs  multi_agent.rs  prompt.rs  short_long_memory.rs  single_agent.rs  text_to_image.rs  tool.rs
agent/src/pkg/: dash_vector.rs  mod.rs  user_info_bank.rs
agent_rt/: Cargo.toml
agent_rt/src/: context.rs  default_node_loader.rs  default_waker_pool.rs  define.rs  error.rs  lib.rs  plan.rs  runtime.rs  runtime_middle.rs  service_layer.rs
agentv2/: Cargo.toml
agentv2/src/: lib.rs  openai_llm.rs  tool.rs
example/: Cargo.toml  build.rs
example/proto/: agent_service.proto
example/src/: fine_turning.rs  main.rs  memory_ex.rs  prompt_ex.rs  serve.rs
example/src/agent_serve/: common.rs  mod.rs  serve_entity.rs
example/src/proto/: mod.rs  proto.rs
example/src/tools/: google_search.rs  mod.rs
python_rt/: Cargo.toml  Dockerfile  build.sh  build_img.sh
python_rt/custom_plugin/: sys_info.py
python_rt/proto/: python_runtime_service.proto
python_rt/src/: lib.rs  main_back.rs
python_rt/src/grpc/: client.rs  mod.rs  server.rs
python_rt/src/proto/: proto.rs
python_rt/src/py_runtime/: mod.rs  py_script_code.rs
rt/: Cargo.toml
rt/src/: context.rs  default_callback_set.rs  define.rs  error.rs  in_out_put.rs  lib.rs  plan.rs  runtime.rs  runtime_middle.rs  rwmap_node_loader.rs  service_layer.rs
rtv2/: Cargo.toml
rtv2/src/: context.rs  default_node_loader.rs  default_waker_pool.rs  define.rs  error.rs  in_out_put.rs  lib.rs  plan.rs  runtime.rs  runtime_middle.rs  task.rs
wd_agent/: Cargo.toml
wd_agent/src/: lib.rs
wd_agent/src/common/: in_out_bonding.rs  mod.rs
wd_agent/src/plugin_tools/: mod.rs  plugin.rs  plugin_control.rs  tool_custom_function.rs  tool_http_api.rs  tool_py.rs
wd_agent/src/rt_node_service/: in_out_bonding.rs  injector.rs  mod.rs  openai_llm.rs  python.rs  selector.rs  tool.rs  var.rs  workflow.rs
wd_agent/workflow/: single_agent
webui/: .gitignore  Cargo.toml  Trunk.toml  index.html  single_agent_plan.json
webui/assets/: manifest.json  sw.js
webui/server/: build.sh  go.mod  go.sum  main.go
webui/server/biz/: agent_call.go  load_plugin.go  middle_cors.go
webui/server/infra/client/agent_rt_client/: client.go
webui/server/infra/client/agent_rt_client/proto/: agent_service.pb.go  agent_service_grpc.pb.go
webui/server/plugin/: flow_chart.json  llm.json  script_code.json  workflow.json  zhipu-glm.json
webui/src/: lib.rs  main.rs
webui/src/app/: entry_point.rs  mod.rs  state.rs
webui/src/app/main_frame/: about.rs  control_tools.rs  debug.rs  mod.rs  project.rs  setting.rs  text_control_view.rs  work_flow_view.rs
webui/src/app/plugin_view/: array_view.rs  bool_view.rs  common.rs  custom_input_field.rs  debug.rs  goto.rs  mod.rs  number_slider.rs  object_view.rs  output.rs  render_service_node_win.rs  string_text_edit.rs
webui/src/app/sys_setting/: font.rs  mod.rs
webui/src/infra/: egui_http.rs  mod.rs
