[workspace]
members = ["agent", "example", "rt", "rtv2"]

[workspace.package]
edition = "2021"
authors = ["Teshin <1443965173@qq.com>"]
repository = "https://github.com/woshihaoren4/rush"
keywords = ["agent-rt-ws"]
description = "agent scheduling"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
wd_tools = {version = "0.10.0",features = ["point-free","sync","ptr","md5","hex","time"]}
anyhow = "1.0.75"
serde = {version = "1.0.188",features = ["derive"]}
serde_json = "1.0.105"
tokio = {version = "1",features = ["full"]}
async-channel = "2.2.0"
wd_log = "0.2.0"
async-trait = "0.1.77"
async-openai = "0.19.0"
lazy_static = "1.4.0"
bytes = "1.5.0"
