[workspace]
members = ["wd_agent", "agent_rt", "python_rt", "webui", "example"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Teshin <1443965173@qq.com>"]
repository = "https://github.com/woshihaoren4/rush"
keywords = ["agent-rt-ws"]
description = "agent scheduling"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
wd_tools = {version = "0.13.8",features = ["point-free","sync","ptr","md5","hex","time","http","b64","pool"]}
wd_log = "0.3.0"
anyhow = "1.0.75"
async-trait = "0.1.77"
serde = {version = "1.0.188",features = ["derive"]}
serde_json = "1.0.105"
tokio = {version = "1",features = ["full"]}
lazy_static = "1.4.0"
futures = "0.3.30"
