[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rt = {path = "../rt",version = "0.1"}
tokio.workspace = true
async-openai.workspace = true
anyhow.workspace = true
wd_tools.workspace = true
wd_log.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true