[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_rt = {path = "../agent_rt",version = "0.1"}
tokio.workspace = true
async-openai.workspace = true
anyhow.workspace = true
wd_tools.workspace = true
wd_log.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
sled = "0.34.7"
hyper = {version = "1.2.0",features = ["full"]}
hyper-util = { version = "0.1.3",features = ["client","http1"] }
hyper-tls = "0.6.0"
http-body-util = "0.1"
bytes.workspace = true