[package]
name = "agentv2"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wd_log.workspace = true
wd_tools.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-channel.workspace = true
async-trait.workspace = true
serde.workspace = true
async-openai.workspace = true
agent_rt = {path = "../agent_rt",version = "0.1"}
futures.workspace = true