[package]
name = "example"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
wd_tools.workspace = true
wd_log.workspace = true
async-openai.workspace = true
agent_rt = {path = "../agent_rt",version = "0.1"}
agent = {path = "../agent",version = "0.1"}
