[package]
name = "example"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wd_log.workspace = true
wd_tools = {worksapce = true,features = ["point-free"]}
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true

tonic = { version = "0.11.0" }
prost-types = { version = "0.12" }
prost = { version = "0.12"}

agent_rt = {path = "../agent_rt",version = "0.2"}
wd_agent = {path = "../wd_agent",version = "0.1"}

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

[[bin]]
name = "serve"
path = "src/serve.rs"