[package]
name = "python_rt"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wd_tools.workspace = true
wd_log.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
async-trait.workspace = true
pyo3 = {version = "0.21.2",features = ["auto-initialize","serde"]}
tonic = { version = "0.11.0",optional = true }
prost-types = { version = "0.12", optional = true }
prost = { version = "0.12",optional = true }

[features]
#default = []
default = ["grpc","server","client"]
#full = ["grpc","server","client"]
grpc = ["tonic","prost-types","prost"]
server = ["grpc"]
client = ["grpc"]