[package]
name = "rt"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
wd_tools.workspace = true
async-channel.workspace = true
wd_log.workspace = true
async-trait.workspace = true
serde.workspace = true