[package]
name = "wd_agent"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wd_log.workspace = true
wd_tools.worksapce = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
futures.workspace = true
lazy_static.workspace = true

async-channel = "2.2.0"
async-openai = "0.21.0"
bytes = "1.5.0"
reqwest = "0.12.0"

agent_rt = {path = "../agent_rt",version = "0.2"}
python_rt = {path = "../python_rt",version = "0.1",features = ["client"]}

